# RLCD

./: .gitignore  README.md
docs/: es7210-microphone-array.md
docs/plans/: 2026-02-10-hello-vu-design.md  2026-02-10-rendering-toolkit-design.md
esp32_rendering/: .gitignore  CMakeLists.txt  README.md  idf.sh  partitions.csv  sdkconfig.defaults
esp32_rendering/components/buttons/: CMakeLists.txt
esp32_rendering/components/i2c_bsp/: CMakeLists.txt
esp32_rendering/components/rendering/: CMakeLists.txt
esp32_rendering/components/rendering/include/rendering/: animation.hpp  bezier.hpp  brush_cache.hpp  clock_face.hpp  dirty_tracker.hpp  framebuffer.hpp  mask_buffer.hpp  patterns.hpp  primitives.hpp  shapes.hpp  types.hpp  vector_font.hpp
esp32_rendering/components/rendering/src/: animation.cpp  bezier.cpp  brush_cache.cpp  clock_face.cpp  dirty_tracker.cpp  framebuffer.cpp  mask_buffer.cpp  patterns.cpp  primitives.cpp  shapes.cpp  vector_font.cpp
esp32_rendering/components/sensors/: CMakeLists.txt
esp32_rendering/docs/: PROGRESS.md  ST7305_FLICKER_INVESTIGATION.md
esp32_rendering/main/: CMakeLists.txt  main.cpp
hello_vu/: CMakeLists.txt  sdkconfig.defaults
hello_vu/main/: CMakeLists.txt  main.cpp
simulator/: data_provider.py  demo.py  main.py  test_demo.py
simulator/rendering/: __init__.py  animation.py  bezier.py  display.py  framebuffer.py  patterns.py  primitives.py  test_animation.py  test_bezier.py  test_display.py  test_framebuffer.py  test_patterns.py  test_primitives.py  test_vector_font.py  vector_font.py
(+20 files in other folders)
